<resources>
    <string name="app_name">exemplecrud</string>
    <string name="btn_envoyer">Envoyer</string>
    <string name="text_message_hint">Votre message...</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="confirm_header">Voulez-vous vraiment envoyer le message :</string>
    <string name="btn_confirm">Confirmer</string>
    <string name="btn_edit">Modifier</string>
    <string name="btn_cancel">Annuler</string>
    <string name="expediteur">Expéditeur</string>
    <string name="date">Date</string>
    <string name="message">Message</string>
    <string name="tv_from">De :</string>
    <string name="tv_date">Le :</string>
    <string name="tv_message">Message :</string>
    <string name="btn_new">Nouveau message</string>
    <string name="btn_prev">Message précédant</string>
    <string name="btn_next">Message suivant</string>
    <string name="tv_pk">Primary Key SQL du message :</string>
    <string name="aucun_message">Aucun message</string>
    <string name="dernier_message">Il n\'y a pas d\'autres messages</string>
    <string name="message_ajoute">Message ajouté</string>
</resources>
